added new routes on swagger
